# NLib

./: CMakeLists.txt  Doxyfile  README.md  package.xml
build-src-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  rules.ninja  test.cbp  test_timeseries
build-src-Desktop-Debug/.qtc_clangd/: compile_commands.json
docs/html/: annotated.html  classes.html  classnlib_1_1Channel-members.html  classnlib_1_1Channel.html  classnlib_1_1Flag-members.html  classnlib_1_1Flag.html  classnlib_1_1NlModFlow-members.html  classnlib_1_1NlModFlow.html  classnlib_1_1NlModule-members.html  classnlib_1_1NlModule.html  classnlib_1_1NlModule__inherit__graph.map  classnlib_1_1NlModule__inherit__graph.md5  classnlib_1_1NlNode-members.html  classnlib_1_1NlNode.html  classnlib_1_1NlNode__coll__graph.map  classnlib_1_1NlNode__coll__graph.md5  classnlib_1_1NlParams-members.html  classnlib_1_1NlParams.html  classnlib_1_1NlSinks-members.html  classnlib_1_1NlSinks.html  classnlib_1_1NlSinks__coll__graph.map  classnlib_1_1NlSinks__coll__graph.md5  classnlib_1_1NlSources-members.html  classnlib_1_1NlSources.html  classnlib_1_1NlSources__coll__graph.md5  classnlib_1_1NlSources__inherit__graph.map  classnlib_1_1OutputManager-members.html  classnlib_1_1OutputManager.html  classnlib_1_1ReadyFlags-members.html  classnlib_1_1ReadyFlags.html  classnlib_1_1SerializedSlot-members.html  (+60 more)
example/: example_modflow.cpp  example_modflow.h  example_node.cpp  example_node.h
launch/: example.launch
src/: CMakeLists.txt  CMakeLists.txt.user.eb66f1f  nlib.cpp  nlnode.cpp  test_timeseries.cpp
tests/: CMakeLists.txt  test_time_hysteresis.cpp
(+334 files in other folders)
